# C-software-collection

./: .gitignore  LICENSE.md  README.md
Add linker test/: add.c  makefile
Add linker test/include/: add.h
Arkaman/: CMakeLists.txt
Arkaman function/: Arkman  makefile
Arkaman/src/: Arkman.c
DOS/: hello.c  hello.com  makefile
Display file/: Displayfile.c  makefile
Factorial/: CMakeLists.txt  fact.c  makefile
Fibonachi/: CMakeLists.txt  Fibo.c  makefile
Fibonachi/src/: Fibo.c
File/: CMakeLists.txt  File.c  makefile
File/src/: File.c
Float/: CMakeLists.txt  float.c  makefile
Float/src/: float.c
Hello/: CMakeLists.txt  hello  makefile
Hello/src/: hello.c
Prime numbers/: CMakeLists.txt  makefile  prime.c
Prime numbers/src/: prime.c
System test/: makefile  test.c
Test/: CMakeLists.txt  makefile  test.c
Test/src/: test.c
Win64/: CMakeLists.txt  makefile  win64.c
Win64/src/: win64.c
WinGui/: Resource.h  Win32.c  makefile  resource.rc
colour/: CMakeLists.txt  makefile
colour/src/: colour.c
curses/: CMakeLists.txt  makefile  ncurses
curses/src/: ncurses.c
freewin/: freewin.c  makefile
freewin/ASM/: PEDEMO.ASM
freewin/Add/: Add.c  Add.h  makefile
freewin/Arkaman/: Arkman.c  makefile
freewin/Factorial/: fact.c  makefile
freewin/Fibonachi/: makefile
freewin/Float/: makefile
freewin/Hello/: freewin.c  makefile
hello/: hello  makefile
libadd/: CMakeLists.txt
libadd/lib/: add.c
libadd/src/: test.c
prime/: CMakeLists.txt
prime/src/: prime.c
printfile/: CMakeLists.txt  makefile
printfile/src/: printfile.c
